# deferred3d-parallel-game-engine

./: README.md
d3d/: CMakeLists.txt  FindBullet.cmake
d3d/resources/maps/: floor007_diffuse.tga  floor007_normal.tga  floor007_specular.tga  horrorMap.3dw  horrorMap.mtl  wall007_diffuse.tga  wall007_normal.tga  wall007_specular.tga  wall008_diffuse.tga  wall008_normal.tga  wall008_specular.tga  wall011_diffuse.tga  wall011_normal.tga  wall011_specular.tga
d3d/resources/models/: GITest.mtl  GITest3.mtl
d3d/resources/models/dabrovic-sponza/: sponza.mtl
d3d/resources/shaders/: blurHorizontal.frag  blurHorizontalEdgeAware.frag  blurVertical.frag  blurVerticalEdgeAware.frag  defaultVertex.vert  depthRender.frag  noTransformFragment.frag  positionOnlyFragment.frag  renderImage.frag  renderImageMult.frag
d3d/resources/shaders/custom/: trileRender.frag  trileRender.vert  trixelRender.frag  trixelRender.geom
d3d/resources/shaders/gbufferrender/: gBufferRender.frag  gBufferRenderBump.frag  gBufferRenderParallax.frag  gBufferRenderParallax.vert
d3d/resources/shaders/imageeffects/: depthOfFieldBlurHorizontal.frag  depthOfFieldBlurVertical.frag  fog.frag  fxaa.frag  gi.comp  lightScattering.frag  lumaRender.frag  ssao.frag  ssr.frag
d3d/resources/shaders/light/: emissiveRender.frag
d3d/resources/shaders/light/shadowed/: directionalShadowed.frag  point.frag
d3d/resources/shaders/light/unshadowed/: directional.frag  point.frag  spot.frag
d3d/resources/shaders/voxel/: depthRenderGrass.frag  depthRenderGrass.vert  gBufferRenderBumpVoxel.frag  gBufferRenderBumpVoxel.vert  gBufferRenderGrass.frag  gBufferRenderGrass.vert  gBufferRenderVoxelDepth.frag  gBufferRenderVoxelDepth.vert
d3d/source/: CMakeLists.txt
d3d/source/d3d/assetmanager/: Asset.h  AssetManager.cpp  AssetManager.h
d3d/source/d3d/bvh/: BVHNode.cpp  BVHNode.h  BVHTree.cpp  BVHTree.h
d3d/source/d3d/constructs/: AABB2D.cpp  AABB2D.h  AABB3D.cpp  AABB3D.h  Matrix3x3f.cpp  Matrix3x3f.h  Matrix4x4f.cpp  Matrix4x4f.h  PlaneEquationf.cpp  PlaneEquationf.h  Planef.cpp  Planef.h  Point2i.cpp  Point3i.cpp  Point4i.cpp  Quaternion.cpp  Quaternion.h  Vec2f.cpp  Vec2f.h  Vec3f.cpp  Vec3f.h  Vec4f.cpp  Vec4f.h
d3d/source/d3d/geometry/: Form.h  FormTriangle.cpp  FormTriangle.h
d3d/source/d3d/physics/: BulletConversions.cpp  BulletConversions.h  DynamicCharacterController.cpp  DynamicCharacterController.h
d3d/source/d3d/rendering/: Camera.cpp  Camera.h  GBuffer.cpp  GBuffer.h  SFMLOGL.cpp  SFMLOGL.h
d3d/source/d3d/rendering/bufferobjects/: CubeMapDepthRT.cpp  CubeMapDepthRT.h  CubeMapRT.cpp  CubeMapRT.h  DepthRT.cpp  DepthRT.h  TextureRT.cpp  TextureRT.h  VBO.cpp  VBO.h
d3d/source/d3d/rendering/culling/: Frustum.cpp  Frustum.h
d3d/source/d3d/rendering/imageeffects/: SceneObjectDepthOfField.cpp  SceneObjectDepthOfField.h  SceneObjectEffectBuffer.cpp  SceneObjectEffectBuffer.h  SceneObjectFXAA.cpp  SceneObjectFXAA.h  SceneObjectFog.cpp  SceneObjectFog.h  SceneObjectGI.cpp  SceneObjectGI.h  SceneObjectLightScattering.cpp  SceneObjectLightScattering.h  SceneObjectSSAO.cpp  SceneObjectSSAO.h  SceneObjectSSR.cpp  SceneObjectSSR.h
d3d/source/d3d/rendering/lighting/: SceneObjectDirectionalLight.cpp  SceneObjectDirectionalLight.h  SceneObjectDirectionalLightShadowed.cpp  SceneObjectDirectionalLightShadowed.h  SceneObjectLighting.cpp  SceneObjectLighting.h  SceneObjectPointLight.cpp  (+5 more)
d3d/source/d3d/scene/: RenderScene.cpp  RenderScene.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  SceneObjectRef.cpp  SceneObjectRef.h  State.cpp  State.h
d3d/source/d3d/sceneobjects/: SceneObjectBox.cpp  SceneObjectBox.h  SceneObjectFloatingCamera.cpp  SceneObjectFloatingCamera.h  SceneObjectPlayer.cpp  SceneObjectPlayer.h  SceneObjectProp.cpp  SceneObjectProp.h  SceneObjectPropLOD.cpp  SceneObjectPropLOD.h
d3d/source/d3d/system/: ComputeProgram.cpp  ComputeProgram.h  ComputeSystem.cpp  ComputeSystem.h  ThreadPool.cpp  ThreadPool.h
d3d/source/d3d/util/: Functions.cpp  Math.h  NoiseGenerator.cpp  NoiseGenerator.h
(+63 files in other folders)
